# rust.code-maven.com

./: .ackrc  .gitignore  README.md  TODO.md  books.sh  clear.sh  config.yaml  generate.sh  skeleton.md
.github/: dependabot.yml
.github/workflows/: ci.yml  gh-pages.yml  rust.yml
authors/: szabgab.md
books/: README.md  book.toml
books/clap/: book.toml
books/clippy/: book.toml
books/csv/: README.md  book.toml
books/error-handling/: book.toml
books/handlebars/: book.toml
books/json/: README.md  book.toml
books/learning-tasks/: book.toml
books/liquid/: book.toml
books/logging/: README.md  book.toml  custom.js
books/macros/: book.toml
books/other/: book.toml
books/regex/: book.toml
books/reqwest/: README.md  book.toml
books/rocket/: book.toml
books/rust/: book.toml
books/rust-async/: .gitignore  README.md  book.toml
books/rust-json/: book.toml
books/rust-liquid/: book.toml
books/rust-parallel/: book.toml
books/rust-programming/: book.toml  custom.js
books/sqlite/: book.toml
books/sqlx/: README.md  book.toml  copilot-instructions.md
books/sqlx/examples/sqlx-postgres-todos/: Cargo.toml
books/sqlx/examples/sqlx-sqlite-serialize/: .gitignore  Cargo.toml  README.md
books/sqlx/examples/sqlx-sqlite-serialize/src/: main.rs
books/sqlx/examples/sqlx-sqlite-todo/: Cargo.toml  README.md
books/sqlx/examples/sqlx-sqlite-todo/src/: main.rs  tests.rs
books/surrealdb/: book.toml
books/surrealdb/src/examples/surrealdb/cli-multi-counter/: Cargo.toml
books/surrealdb/src/examples/surrealdb/cli-multi-counter/db/: 000019.sst  IDENTITY  MANIFEST-000013  OPTIONS-000007
books/surrealdb/src/examples/surrealdb/in-memory-demo/: Cargo.toml
books/surrealdb/src/examples/surrealdb/in-memory-demo/src/: main.rs
books/testing/: book.toml
books/what-i-learned-from-learning-rust/: book.toml
books/why-rust/: book.toml
books/yaml/: README.md  book.toml
emails/: rust-maven-2023-11-08.md  rust-maven-2023-11-13.md  rust-maven-2023-11-20.md  rust-maven-2023-11-22.md  rust-maven-2023-11-27.md  rust-maven-2023-11-28.md  rust-maven-2023-12-02.md  rust-maven-2023-12-03.md  rust-maven-2023-12-05.md  rust-maven-2023-12-11.md  rust-maven-2023-12-12.md  rust-maven-2023-12-15.md  rust-maven-2023-12-16.md  rust-maven-2023-12-18.md  rust-maven-2023-12-20.md  rust-maven-2023-12-27.md  rust-maven-2023-12-30.md  rust-maven-2024-01-01.md  rust-maven-2024-01-03.md  rust-maven-2024-01-05.md  rust-maven-2024-01-07.md  rust-maven-2024-01-10.md  rust-maven-2024-01-18.md  rust-maven-2024-01-20.md  rust-maven-2024-03-14.md  rust-maven-2024-03-17.md  rust-maven-2024-03-23.md  rust-maven-2024-03-26.md  rust-maven-2024-04-03.md  rust-maven-2024-04-04.md  rust-maven-2024-05-22.md  rust-maven-2024-05-29.md
examples/: code_with_typo.rs  companies.yaml  enumerate_and_match.rs  meetups.yaml  sponsoring.yaml
examples/add-strings-or-exit/: Cargo.toml
examples/add-strings-return-result/: Cargo.toml
examples/add-strings-unwrap/: Cargo.toml
examples/area-function/: Cargo.toml
examples/area-struct-and-function/: Cargo.toml
examples/area-struct-and-method/: Cargo.toml
examples/area-struct-and-trait/: Cargo.toml
examples/argv-command-line-parameters-with-count/: Cargo.toml
examples/argv-simple-command-line-parameters/: Cargo.toml
examples/clap/show-build-details/: Cargo.toml
examples/clap/show-build-details/src/: main.rs
examples/hello-clippy/: Cargo.toml
examples/hello-clippy/src/: main.rs
examples/read-and-parse-cargo-toml/: Cargo.toml
examples/read-and-parse-cargo-toml/src/: main.rs
examples/slurp/: data.txt  (+1 more)
examples/surrealdb/cli-multi-counter/: Cargo.toml
examples/surrealdb/cli-multi-counter/src/: main.rs
examples/surrealdb/cli-multi-counter/tests/: tests.rs
examples/surrealdb/cli-phone-book-with-embedded-rocksdb/: Cargo.toml
examples/surrealdb/cli-phone-book-with-embedded-rocksdb/src/: main.rs
examples/surrealdb/cli-phone-book-with-embedded-rocksdb/tests/: test_empty.rs  tests.rs
examples/surrealdb/foreign-key/: Cargo.toml
examples/surrealdb/foreign-key/src/: example.rs  main.rs
examples/uninlined-format-args/: Cargo.toml
examples/uninlined-format-args/src/: main.rs
pages/: 404.md  about.md  accepting-parameters-on-the-command-line-using-rust-clap.md  adding-repository-to-cargo-toml-video.md  an-introduction-to-wasm-in-rust.md  append-to-a-file.md  applications.md  are-we-embedded-yet.md  argv-simple-command-line-parameters.md  async.md  automatically-fixing-issues-in-rust.md  avoid-unwrap.md  basic-gitlab-pipeline-for-rust.md  block-mesh-network.md  boolean-not.md  cache-the-hashmap-result-of-a-function.md  cache-the-result-of-a-function.md  cached-dispatch-table.md  calculator.md  change-a-single-character-in-a-string.md  check-of-key-exists-in-hashmap.md  clap-about-the-application.md  clap-default-values.md  clap-help-text.md  clap-include-sha1-from-git-in-the-version-report-using-derive-interface-of-clap.md  clap-positional-arguments.md  clap-short.md  clap-show-version-number.md  clap-simple.md  clap-strings-numbers-float.md  clap-subcommand.md  clap.md  cli-counter-with-plain-text-file.md  cli-simple-phonebook-with-surrealdb-using-sql.md  cli.md  colored-terminal.md  commafy-thousands.md  commafy.md  compare-structs.md  compile-size.md  (+282 more)
preprocessing/: Cargo.toml
slides/: books.txt
slides/rust/examples/other/check-slides/: Cargo.toml  skips.csv
slides/rust/examples/other/check-slides/src/: main.rs
slides/rust/examples/rocket/people-and-groups/: Cargo.toml
slides/rust/examples/rocket/people-and-groups/src/: db.rs  main.rs  mytera.rs
slides/rust/examples/rocket/people-and-groups/templates/: group.html.tera  groups.html.tera  index.html.tera  membership_deleted.html.tera  memberships.html.tera  people.html.tera  person.html.tera  person_added.html.tera
slides/rust/examples/rocket/people-and-groups/templates/incl/: footer.html.tera  header.html.tera  menu.html.tera
slides/rust/examples/surrealdb/insert-select-in-memory/: Cargo.toml  out.out
slides/rust/examples/surrealdb/insert-select-in-memory/src/: main.rs
(+3958 files in other folders)
