[package]
name = "show-build-details"
version = "0.1.0"
edition = "2021"
# build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
shadow-rs = "0.26"


[build-dependencies]
shadow-rs = "0.26"
