[package]
name = "phonebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = { version = "1.0.2", features = ["kv-rocksdb"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
