[package]
name = "check-slides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
simple_logger = "5.0.0"
threadpool = "1.8.1"
